fix library nameing and add initial bootstrap container and rows

--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -24,7 +24,7 @@ $red-light:                         #f2c0c0;
 $primary: $blue;
 
 // Set default font
-$font-family-sans-serif: 'Arial Black', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" ;
+$font-family-sans-serif: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" ;
 
 $lead-font-size: 1.2rem;
 $lead-font-weight: 400;
