--- a/web/themes/bobpol/templates/layout/page.html.twig
+++ b/web/themes/bobpol/templates/layout/page.html.twig
@@ -43,20 +43,27 @@
  * @see html.html.twig
  */
 #}
-<div class="layout-container">
-  <header role="banner">
-    {{ page.header }}
-  </header>
-  <main role="main">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-    <div class="layout-content">
-      {{ page.content }}
-    </div>{# /.layout-content #}
-  </main>
+<div class="container">
+  <div class="row">
+    <header class="col-md-12" role="banner">
+      {{ page.header }}
+    </header>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12" role="main">
+      <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+      <div class="layout-content">
+        {{ page.content }}
+      </div>{# /.layout-content #}
+    </div>
+  </div>
 
   {% if page.footer %}
+  <div class="row">
     <footer role="contentinfo">
       {{ page.footer }}
     </footer>
+  </div>
   {% endif %}
 </div>{# /.layout-container #}
