--- a/web/themes/bobpol/templates/layout/region.html.twig
+++ b/web/themes/bobpol/templates/layout/region.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% if content %}
-  <div{{ attributes }}>
+  {# <div{{ attributes }}> #}
     {{ content }}
-  </div>
+  {# </div> #}
 {% endif %}
