SALG-299: Added hero module

--- a/web/themes/bobpol/templates/layout/page.html.twig
+++ b/web/themes/bobpol/templates/layout/page.html.twig
@@ -47,6 +47,9 @@
   <header role="banner">
     {{ page.header }}
   </header>
+  <div class="grid-element__hero-image">
+    {{ page.hero }}
+  </div>
   <main role="main">
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     <div class="layout-content">
