--- a/web/themes/bobpol/templates/layout/page.html.twig
+++ b/web/themes/bobpol/templates/layout/page.html.twig
@@ -44,13 +44,42 @@
  */
 #}
 
+<div class="container-fluid">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+</div>
 <div class="container">
   <div class="row">
     <header class="col-md-12" role="banner">
       {{ page.header }}
     </header>
   </div>
-  {% if page.hero %}
+{% if page.hero %}
     <div class="grid-element__hero-image">
       {{ page.hero }}
     </div>
@@ -72,3 +101,16 @@
   </div>
   {% endif %}
 </div>{# /.layout-container #}
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3-md">
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <hr>
+      <p><a href="#">Privatlivspolitik</p>
+    </div>
+  </div>
+</div>
