SALG-299: Added templates for filters

--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -49,7 +49,7 @@ $card-inner-border-radius: 0;
 @import "../node_modules/bootstrap/scss/_buttons.scss";
 @import "../node_modules/bootstrap/scss/_transitions.scss";
 // @import "../node_modules/bootstrap/scss/_dropdown.scss";
-// @import "../node_modules/bootstrap/scss/_button-group.scss";
+@import "../node_modules/bootstrap/scss/_button-group.scss";
 // @import "../node_modules/bootstrap/scss/_input-group.scss";
 // @import "../node_modules/bootstrap/scss/_custom-forms.scss";
 @import "../node_modules/bootstrap/scss/_nav.scss";
