--- a/web/themes/bobpol/templates/layout/page.html.twig
+++ b/web/themes/bobpol/templates/layout/page.html.twig
@@ -43,7 +43,7 @@
  * @see html.html.twig
  */
 #}
-
+{#
 <div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -73,17 +73,23 @@
     </div>
   </nav>
 </div>
-<div class="container">
-  <div class="row">
-    <header class="col-md-12" role="banner">
-      {{ page.header }}
-    </header>
-  </div>
+#}
+<div class="container-fluid">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    {{ page.header }}
+  </nav>
+</div>
+<div class="container-fluid">
   {% if page.hero %}
     <div class="grid-element__hero-image">
       {{ page.hero }}
     </div>
   {% endif %}
+</div>
+<div class="container">
   <div class="row"  >
     <main class="col-md-12" role="main">
       <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
