--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -5713,6 +5713,9 @@ a.text-dark:hover, a.text-dark:focus {
 .card .card-body {
   min-height: 11rem; }
 
+.card img {
+  width: 100%; }
+
 nav.navbar {
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.25); }
