--- a/web/themes/bobpol/templates/views/views-view-unformatted.html.twig
+++ b/web/themes/bobpol/templates/views/views-view-unformatted.html.twig
@@ -20,12 +20,7 @@
   <h3>{{ title }}</h3>
 {% endif %}
 {% for row in rows %}
-  {%
-    set row_classes = [
-      default_row_class ? 'col-md-4',
-    ]
-  %}
-  <div{{ row.attributes.addClass(row_classes) }}>
+  <div class="col-md-4">
     {{ row.content }}
   </div>
 {% endfor %}
