--- a/web/modules/custom/aarhus_hero/templates/aarhus-hero-block.html.twig
+++ b/web/modules/custom/aarhus_hero/templates/aarhus-hero-block.html.twig
@@ -10,7 +10,7 @@
 #}
 
 <div class="hero-container">
-  <div class="hero">
+  <div class="hero hero--image-right">
     <div class="hero__media-container">
       <div class="hero__media background-image-holder">
         {{ image }}
