Styling for category btns

--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -10,6 +10,7 @@
 // Import partials
 @import 'partials/_nav';
 @import 'partials/_hero';
+@import 'partials/_btn';
 @import 'partials/_card';
 @import 'partials/_footer';
 @import 'partials/_drupal';
