--- a/web/themes/bobpol/templates/form/form-element--radio.html.twig
+++ b/web/themes/bobpol/templates/form/form-element--radio.html.twig
@@ -45,7 +45,7 @@
  */
 #}
 
-<label class="btn btn-secondary {{ element['#attributes']['checked'] ? 'active' : '' }}">
+<label class="btn btn-category {{ element['#attributes']['checked'] ? 'active' : '' }}">
   {{ children }} {{ label['#title'] }}
 </label>
 
