--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -54,6 +54,9 @@ $font-family-sans-serif: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", R
 $lead-font-size: 1.2rem;
 $lead-font-weight: 400;
 
+// Disable rounded corners
+$enable-rounded: false;
+
 // Set card defaults
 $card-border-radius: 0;
 $card-border-color: none;
