--- a/web/themes/bobpol/scss/partials/_card.scss
+++ b/web/themes/bobpol/scss/partials/_card.scss
@@ -11,4 +11,24 @@
   img {
     width: 100%;
   }
+
+  .btn.hotness-1{
+    background-color: $blue-light;
+  }
+
+  .btn.hotness-2{
+    background-color: $navy-light;
+  }
+
+  .btn.hotness-3{
+    background-color: $blue;
+  }
+
+  .btn.hotness-4{
+    background-color: $navy;
+  }
+
+  .btn.hotness-5{
+    background-color: $purple;
+  }
 }
