SALG-299: Added contrib modules

--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -13,6 +13,7 @@
 @import 'partials/_btn';
 @import 'partials/_card';
 @import 'partials/_footer';
+@import 'partials/_content';
 @import 'partials/_drupal';
 
 // Global styles
