--- a/web/themes/bobpol/templates/content/flag.html.twig
+++ b/web/themes/bobpol/templates/content/flag.html.twig
@@ -35,6 +35,7 @@
   set classes_att = [
   'btn',
   'btn-primary',
+  'float-right',
   'hotness-' ~ hotness,
   action_class
   ]
@@ -43,5 +44,5 @@
 {# Set nofollow to prevent search bots from crawling anonymous flag links #}
 {% set attributes = attributes.setAttribute('rel', 'nofollow') %}
 
-<div class="{{classes|join(' ')}}"><a{{ attributes.addClass(classes_att|join(' ')) }}>{{ title }} {{ flag_count }}</a></div>
+<div class="{{classes|join(' ')}}"><a{{ attributes.addClass(classes_att|join(' ')) }}><i class="fas fa-thumbs-up mr-2"></i>{# {{ title }} #} <span class="badge badge-light">{{ flag_count }}</span></a></div>
 {% endspaceless %}
