Add user btn in top right corner

--- a/web/themes/bobpol/templates/layout/page.html.twig
+++ b/web/themes/bobpol/templates/layout/page.html.twig
@@ -50,6 +50,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     {{ page.header }}
+    <a href="/user" class="btn btn-primary rounded-circle float-right"><i class="fas fa-user"></i></a>
   </div>
 </nav>
 
