Set hotness colors

--- a/web/themes/bobpol/scss/partials/_card.scss
+++ b/web/themes/bobpol/scss/partials/_card.scss
@@ -13,22 +13,22 @@
   }
 
   .btn.hotness-1{
-    background-color: $blue-light;
-  }
-
-  .btn.hotness-2{
-    background-color: $navy-light;
-  }
-
-  .btn.hotness-3{
     background-color: $blue;
   }
 
+  .btn.hotness-2{
+    background-color: $petroleum;
+  }
+
+  .btn.hotness-3{
+    background-color: $purple;
+  }
+
   .btn.hotness-4{
-    background-color: $navy;
+    background-color: $orange;
   }
 
   .btn.hotness-5{
-    background-color: $purple;
+    background-color: $pink;
   }
 }
