--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -48,6 +48,9 @@ $red-light:                         #f2c0c0;
 // Set primary color
 $primary: $blue;
 
+// Set primary color
+$secondary: $pink;
+
 // Set default font
 $font-family-sans-serif: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" ;
 
