--- a/web/themes/bobpol/scss/_custom-variables.scss
+++ b/web/themes/bobpol/scss/_custom-variables.scss
@@ -3,7 +3,7 @@
 //$nav-trigger-size:                  70px !default;
 // $rounded-button-size:               50px !default;
 // $rounded-button-size-responsive:    36px !default;
-// $underline-width:                   110px !default;
+$underline-width:                   110px !default;
 $underline-width-hover:             130px !default;
 // $header-height:                     100px !default;
 
