--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -15,6 +15,7 @@
 @import 'partials/_footer';
 @import 'partials/_content';
 @import 'partials/_drupal';
+@import 'partials/_utilities';
 
 // Global styles
 
