Set col widths for subpage

--- a/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
@@ -32,11 +32,11 @@
   </{{ header_wrapper }}>
   <div class="container  content__container">
     <div class="row">
-      <{{ left_wrapper }}{{ left_attributes.addClass('content group-left col-md') }}>
+      <{{ left_wrapper }}{{ left_attributes.addClass('content group-left col-md-8') }}>
         {{ left }}
       </{{ left_wrapper }}>
 
-      <{{ right_wrapper }}{{ right_attributes.addClass('group-right col-md') }}>
+      <{{ right_wrapper }}{{ right_attributes.addClass('group-right col-md-4') }}>
         {{ right }}
       </{{ right_wrapper }}>
     </div>
