--- a/web/themes/bobpol/scss/partials/_content.scss
+++ b/web/themes/bobpol/scss/partials/_content.scss
@@ -1,3 +1,14 @@
 .content {
   background: $white;
+  padding-top: $spacer;
+  padding-bottom: $spacer;
+  &.group-left:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 100%;
+    width: 200%;
+    background: #fff;
+  }
 }
