--- a/web/themes/bobpol/templates/layout/page--node.html.twig
+++ b/web/themes/bobpol/templates/layout/page--node.html.twig
@@ -43,13 +43,14 @@
  * @see html.html.twig
  */
 #}
+
+{# TODO: Move <nav> into its own template since its a copy from page.html.twig #}
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#block-primaernavigation" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     {{ page.header }}
-    <a href="/user" class="btn btn-primary rounded-circle float-right"><i class="fas fa-user"></i></a>
   </div>
 </nav>
 
