--- a/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
@@ -34,6 +34,7 @@
     <div class="row">
       <{{ left_wrapper }}{{ left_attributes.addClass('content group-left col-md-8') }}>
         {{ left }}
+
       </{{ left_wrapper }}>
 
       <{{ right_wrapper }}{{ right_attributes.addClass('group-right col-md-4') }}>
@@ -41,7 +42,7 @@
       </{{ right_wrapper }}>
     </div>
   </div>
-  <{{ footer_wrapper }}{{ footer_attributes.addClass('group-footer container') }}>
+  <{{ footer_wrapper }}{{ footer_attributes.addClass('group-footer container-flex') }}>
     {{ footer }}
   </{{ footer_wrapper }}>
 
