SALG-299: Added templates

--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -5740,6 +5740,9 @@ nav.navbar {
     width: 200%;
     background: #fff; }
 
+.timestamp {
+  display: block; }
+
 .toolbar-oriented .toolbar-bar {
   z-index: 2000; }
 
