--- a/web/themes/bobpol/templates/content/node--teaser.html.twig
+++ b/web/themes/bobpol/templates/content/node--teaser.html.twig
@@ -81,8 +81,8 @@
   <div class="card-footer container">
     <small class="text-muted row">
       <div class="col">
-        <div class="card-category">Tag: {{ content.field_category }}</div>
-        <div class="card-comment-count">Comment count: {{ comment_count }}</div>
+        <div class="card-category">{{ content.field_category }}</div>
+        <div class="card-comment-count">{% trans %}Comment count{% endtrans %}: {{ comment_count }}</div>
       </div>
       <div class="col">
         {{ content|without('body', 'links', 'field_image', 'field_category', 'field_hotness') }}
