--- a/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
@@ -33,8 +33,9 @@
   <div class="container  content__container">
     <div class="row">
       <{{ left_wrapper }}{{ left_attributes.addClass('content group-left col-md-8') }}>
-        {{ left }}
-
+        <div class="content__main ">
+          {{ left }}
+        </div>
       </{{ left_wrapper }}>
 
       <{{ right_wrapper }}{{ right_attributes.addClass('group-right col-md-4') }}>
