SALG-299: Added templates

--- a/web/themes/bobpol/templates/content/comment.html.twig
+++ b/web/themes/bobpol/templates/content/comment.html.twig
@@ -85,8 +85,7 @@
       </p>
     </div>
     <div class="card-footer">
-        {{ user_picture }}
-      <p>{{ submitted }}</p>
+      <small class="text-muted">{{ submitted }}</small>
       {#
         Indicate the semantic relationship between parent and child comments for
         accessibility. The list is difficult to navigate in a screen reader
