--- a/web/themes/bobpol/templates/field/field--comment.html.twig
+++ b/web/themes/bobpol/templates/field/field--comment.html.twig
@@ -45,4 +45,11 @@
     </div>
     {% endif %}
   </div>
+  <div>
+    {% if user_anonymous %}
+      <div class="alert alert-primary mt-3" role="alert">
+        {% trans %}If you wan't to participate in the discussion you must create a user{% endtrans %} <a href="/user">{% trans %}Create user{% endtrans %}</a>
+      </div>
+    {% endif %}
+  </div>
 </section>
